--- a/TomRules.ini
+++ b/TomRules.ini
@@ -88,13 +88,13 @@ custom_proxy_group=🇰🇷 韩国节点`select`(KR|Korea|KOR|首尔|韩|韓)
 custom_proxy_group=🇦🇺 澳大利亚节点`select`(土澳|澳大利亚|澳|AUS)
 custom_proxy_group=🌐 其他地区`select`(^(?!.*(香港|HK|Hong Kong|🇭🇰|HongKong|日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan|新加坡|坡|狮城|SG|Singapore|美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States|台湾|TW|Tai Wan|Tw|Taiwan)).*)
 
-custom_proxy_group=🔯 香港故转`fallback`(?=.*(香港|HK|Hong Kong|🇭🇰|HongKong))*$`http://www.gstatic.com/generate_204`600,5,100
-custom_proxy_group=TW 台湾故转`fallback`(?=.*(台湾|TW|Tai Wan|Tw|Taiwan|台|新北|彰化))*$`http://www.gstatic.com/generate_204`600,5,100
-custom_proxy_group=🔯 日本故转`fallback`(?=.*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan))*$`http://www.gstatic.com/generate_204`600,5,100
-custom_proxy_group=🔯 加坡故转`fallback`(?=.*(新加坡|坡|狮城|SG|Singapore))*$`http://www.gstatic.com/generate_204`600,5,100
-custom_proxy_group=🇺🇲 美国故转`select`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)*$`http://www.gstatic.com/generate_204`600,5,100
-custom_proxy_group=🇰🇷 韩国故转`select`(KR|Korea|KOR|首尔|韩|韓)*$`http://www.gstatic.com/generate_204`600,5,100
-custom_proxy_group=🇦🇺 澳大利亚故转`select`(土澳|澳大利亚|澳|AUS)*$`http://www.gstatic.com/generate_204`600,5,100
+custom_proxy_group=🔯 香港故转`fallback`(?=.*(香港|HK|Hong Kong|🇭🇰|HongKong))`http://www.gstatic.com/generate_204`600,5,100
+custom_proxy_group=TW 台湾故转`fallback`(?=.*(台湾|TW|Tai Wan|Tw|Taiwan|台|新北|彰化))`http://www.gstatic.com/generate_204`600,5,100
+custom_proxy_group=🔯 日本故转`fallback`(?=.*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan))`http://www.gstatic.com/generate_204`600,5,100
+custom_proxy_group=🔯 加坡故转`fallback`(?=.*(新加坡|坡|狮城|SG|Singapore))`http://www.gstatic.com/generate_204`600,5,100
+custom_proxy_group=🇺🇲 美国故转`select`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`600,5,100
+custom_proxy_group=🇰🇷 韩国故转`select`(KR|Korea|KOR|首尔|韩|韓)`http://www.gstatic.com/generate_204`600,5,100
+custom_proxy_group=🇦🇺 澳大利亚故转`select`(土澳|澳大利亚|澳|AUS)`http://www.gstatic.com/generate_204`600,5,100
 ;custom_proxy_group=⭐ 香港故转`fallback`!!GROUPID=!0!!(香港|HK|Hong Kong|🇭🇰|HongKong)`http://www.gstatic.com/generate_204`300,,50
 ;custom_proxy_group=⭐ 日本故转`fallback`!!GROUPID=!0!!(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🍃 香港均衡`load-balance`(?=.*(香港|HK|Hong Kong|🇭🇰|HongKong))^*$`http://www.gstatic.com/generate_204`600,5,100
